# rugix-bsps

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: build-bsps.yml
boards/: nxp_imx.py  rockchip.py
examples/: build_all.py  build_imx91_frdm.py  build_radxa_rock5b.py
examples/imx91-frdm-project/: rugix-bakery.toml
examples/imx91-frdm-project/layers/: customized.toml
examples/imx91-frdm-project/recipes/bsp-setup/: recipe.toml
examples/imx91-frdm-project/recipes/bsp-setup/steps/: 00-install.sh
examples/imx91-frdm-project/recipes/enable-root-login/steps/: 00-install.sh
examples/nxp-imx-project/: rugix-bakery.toml
examples/nxp-imx-project/layers/: arduino-portenta-x8.toml  base.toml  nxp-imx91-frdm.toml
examples/nxp-imx-project/recipes/bsp-setup/: recipe.toml
examples/nxp-imx-project/recipes/enable-root-login/: recipe.toml
layers/common/classes/: rugix-bsp-export.bbclass
layers/common/conf/: layer.conf
meta-bakery-bsp/classes/: bakery-bsp-export.bbclass
meta-bakery-bsp/conf/: layer.conf
meta-bakery-bsp/recipes-bsp/bakery-boot-script/: bakery-boot-script.bb
src/rugix_bsp/: __init__.py  archive.py  board.py  cli.py  disk.py  distribute.py  extract.py  hashing.py  kas.py  layer.py  models.py  registry.py
src/rugix_bsp/families/: __init__.py
src/rugix_bsp/families/nxp_imx/: __init__.py  boot.cmd
src/rugix_bsp/families/rockchip/: __init__.py
src/rugix_bsp/kas/: __init__.py  manifest.py  project.py  runner.py
src/rugix_bsp/templates/: uboot_boot.cmd
templates/: bootstrapping.toml  fw_env.config  system.toml
(+9 files in other folders)
